--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:12345@localhost:5432/postgres"
+DATABASE_URL="postgresql://postgres:12345@localhost:5432/julio"
 SECRET_KEY="u8Jk%3nGzF^1bLmNq@4WpXsY!7zA*rTf"
