--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.16.0",
     "bcrypt": "^5.1.1",
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
+    "puppeteer": "^22.12.0",
+    "puppeteer-core": "^22.12.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
@@ -33,7 +37,7 @@
     "eslint": "^9.4.0",
     "globals": "^15.3.0",
     "nodemon": "^3.1.0",
-    "prisma": "^5.14.0",
+    "prisma": "^5.16.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.12.0"
